DBScript/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dockersql
spec:
 replicas: 1 
 minReadySeconds: 5 
 template:  
  metadata:
   labels:
    app: dockersql
  spec:
   containers:
    - name: dockersql
      image: microsoft/mssql-server-linux:latest
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 1433
           
---
apiVersion: v1
kind: Service
metadata:
  name: dockersql-service
spec:
  type: LoadBalancer
  ports:
   - name: dockersql
     port: 1433
     targetPort: 1433
  selector:
    app: dockersql
